--- a/angular.json
+++ b/angular.json
@@ -37,8 +37,14 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",            
+              "node_modules/primeicons/primeicons.css" 
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src"]
+             },
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
@@ -100,7 +106,10 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",            
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           }
