--- a/package.json
+++ b/package.json
@@ -21,8 +21,15 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.1",
+    "autoprefixer": "^10.4.20",
     "express": "^4.18.2",
+    "postcss": "^8.4.47",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.3",
+    "tailwindcss": "^3.4.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
