--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "express": "^4.18.2",
     "postcss": "^8.4.47",
     "primeflex": "^3.3.1",
